feat: финальная версия FlowModel
